[gd_scene load_steps=12 format=3 uid="uid://c0jwd6o758hy5"]

[ext_resource type="Script" path="res://scripts/classes/ship/battlecruiser/battecruiser.gd" id="1_g4kc0"]
[ext_resource type="PackedScene" uid="uid://6egvrx5d1252" path="res://scenes/fighters/fleet_1/fleet_1_fighter.tscn" id="2_rmnaq"]
[ext_resource type="Texture2D" uid="uid://dkivkrs3dbikr" path="res://assets/fleet_1/fleet_1/Engine/PNGs/Kla'ed - Battlecruiser - Engine.png" id="3_lnwlh"]
[ext_resource type="Texture2D" uid="uid://dma3pyw3yv7h6" path="res://assets/fleet_1/fleet_1/Base/PNGs/Kla'ed - Battlecruiser - Base.png" id="4_7xaqv"]
[ext_resource type="PackedScene" uid="uid://svlyalwfmbxa" path="res://scenes/ships/modules/battlecruiser_module/battlecruiser_module.tscn" id="5_kgbt4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_24mro"]
radius = 48.0
height = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g46vl"]
radius = 4000.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1qns1"]
radius = 309.0
height = 834.0

[sub_resource type="Animation" id="Animation_4041l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Engine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s0qav"]
resource_name = "engine"
length = 2.00002
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Engine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5, 1.66667, 1.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e8g7t"]
_data = {
"RESET": SubResource("Animation_4041l"),
"engine": SubResource("Animation_s0qav")
}

[node name="fleet_1_battlecruiser" type="RigidBody2D" groups=["fleet_1", "mothership", "ship"]]
mass = 2500.0
center_of_mass_mode = 1
center_of_mass = Vector2(0, 75)
gravity_scale = 0.0
script = ExtResource("1_g4kc0")
fighter = ExtResource("2_rmnaq")

[node name="Engine" type="Sprite2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
rotation = 1.5708
scale = Vector2(7, 7)
texture = ExtResource("3_lnwlh")
hframes = 12

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(7, 7)
texture = ExtResource("4_7xaqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-114, -1)
shape = SubResource("CapsuleShape2D_24mro")

[node name="Detection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_g46vl")

[node name="LOS" type="Area2D" parent="." groups=["line_of_sight"]]
visible = false
position = Vector2(0, -26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LOS"]
shape = SubResource("CapsuleShape2D_1qns1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e8g7t")
}

[node name="UpdateMinimapPosition" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="battlecruiser_module" parent="." instance=ExtResource("5_kgbt4")]

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
[connection signal="timeout" from="UpdateMinimapPosition" to="." method="_on_update_minimap_position_timeout"]

[editable path="battlecruiser_module"]
